--- a/Modulo1/Code/Project1/Project1.csproj
+++ b/Modulo1/Code/Project1/Project1.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="RepeticaoNomeClasse\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="RepeticaoNomeClasse\" />
+  </ItemGroup>
 </Project>
